sample/retrieveUnpackaged/objects/Product_Owned__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Products Owned</relationshipLabel>
        <relationshipName>Products_Owned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products Owned</relationshipLabel>
        <relationshipName>Products_Owned</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <label>Payment Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instalment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Owned</relationshipLabel>
        <relationshipName>Products_Owned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Products Owned</relationshipLabel>
        <relationshipName>Products_Owned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Date__c</fullName>
        <label>Rebate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_cnt__c</fullName>
        <description>Hidden formula used to rollup rebate flag to the customer level.</description>
        <formula>IF( Rebate_Flag__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate cnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Owned</label>
    <nameField>
        <displayFormat>PDT{0000000000}</displayFormat>
        <label>Product Owned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Owned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>